fmcsadmin
(c) 2017-2024 Emic Corporation <https://www.emic.co.jp/>
This software is distributed under the Apache License, Version 2.0, see LICENSE.txt and NOTICE.txt for more information.

Version: 2.2.0 (in development)
- Add support for Claris FileMaker Server 2023 (20.1, 20.2 and 20.3).
- Add support for Ubuntu 22.04 LTS (on amd64 architecture).
- Add support for Ubuntu 22.04 LTS on arm64 architecture.
- Update "GET SERVERPREFS" command to get persistent cache setting for Claris FileMaker Server 2023 (20.1). (Usage: "fmcsadmin get serverprefs PersistCacheEnabled")
- Update "GET SERVERPREFS" command to get persistent cache sync setting for Claris FileMaker Server 2023 (20.1). (Usage: "fmcsadmin get serverprefs SyncPersistCache")
- Update "GET SERVERCONFIG" command and "GET SERVERPREFS" command due to increasing the maximum number of hosted database files per FileMaker Server instance.
- Update "SET SERVERCONFIG" command and "SET SERVERPREFS" command due to increasing the maximum number of hosted database files per FileMaker Server instance.
- Modify behavior of outputting error messages for invalid parameters when using "GET SERVERPREFS" and "SET SERVERPREFS" command.
- Add support for Windows Server 2019 and Windows Server 2022.
- Tested with Claris FileMaker Server 20.3.
- Tested on macOS Sonoma 14.
- Built with Go 1.21.
- [INFO] Drop support for Claris FileMaker Server 19.3 and 19.4.
- [INFO] Drop support for Ubuntu 18.04 LTS.
- [INFO] Drop support for CentOS Linux 7.
- [INFO] Drop support for Windows 10 Version 21H2.
- [INFO] Drop support for macOS Big Sur 11.
- [BUG FIX] Fix "SET SERVERPREFS" command was not executed correctly in some cases.

Version: 2.1.0
Date: May 17, 2023
- Add "-i" option to specify a private key file for FileMaker Admin API PKI Authentication (requires Claris FileMaker Server 19.6.1 or later).
- Update behavior of "GET CWPCONFIG" command and "SET CWPCONFIG" command on Linux for FileMaker Server 19.6.1 or later.